--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <iframe
     width="560"
     height="315"
-    src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1&start=1"
+    src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=0"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
